# parse_pdf

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  concatenated_code.txt  pyproject.toml  refactors.md
.cursor/rules/: 001-coding-standards.mdc
.github/workflows/: ci.yml
doc_parser/: __init__.py  cli.py  config.py  options.py
doc_parser/cli/: __init__.py  main.py
doc_parser/core/: __init__.py  base.py  config.py  error_policy.py  exceptions.py  registry.py  settings.py  types.py
doc_parser/parsers/: __init__.py  base_structured.py
doc_parser/parsers/docx/: __init__.py  parser.py
doc_parser/parsers/excel/: __init__.py  parser.py
doc_parser/parsers/html/: __init__.py  parser.py
doc_parser/parsers/pdf/: __init__.py  extractors.py  parser.py
doc_parser/parsers/pptx/: __init__.py  parser.py
doc_parser/prompts/: __init__.py  base.py  models.py
doc_parser/prompts/templates/: pdf_extraction.j2  pdf_extraction.md
doc_parser/utils/: __init__.py  async_batcher.py  async_helpers.py  cache.py  file_helpers.py  file_validators.py  format_helpers.py  llm_post_processor.py  logging_config.py  mixins.py
docs/: post_parse_prompt_PRD.md  post_parse_prompt_TDD.md  post_processing.md
examples/: example_usage.py  post_processing_example.py  pptx_example.py
examples/pptx/: pptx_example.py
outputs/: JFDS-2025-Varlashova-jfds.2025.1.191_parsed.md  barclay.md  cnn_parsed.md  extracted.md  https___www.theglobeandmail.com__parsed.md  image_summary.md  output.md  output_ssrn-5179962.md  sample_demo.pptx  sample_demo_parsed.md
scripts/: contatenate_code.py
tests/: test_pptx_parser.py
tests/cli/: test_cli.py
tests/core/: test_base_parser_additional.py  test_base_parser_helpers.py  test_error_handling_policy.py  test_registry_and_settings.py
tests/parsers/: test_docx_parser_integration.py  test_excel_parser_integration.py  test_html_helpers.py  test_html_parser_additional.py  test_html_parser_helpers_deep.py  test_html_parser_integration.py  test_pdf_extractors.py  test_pdf_helpers.py  test_pdf_parser_integration.py  test_pptx_parser.py  test_pptx_parser_integration.py
tests/utils/: test_async_helpers_and_batcher.py  test_cache_and_llm.py  test_helpers_functions.py  test_llm_post_processor.py  test_mixins.py
