[project]
name = "doc-parser"
version = "0.1.0"
description = "A modular, extensible document parsing library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html2text>=2020.1.16",
    "numpy>=1.19.0",
    "openpyxl>=3.0",
    "pandas>=1.3.0",
    "pdf2image>=1.17.0",
    "pillow>=9.0",
    "python-docx>=0.8",
    "python-pptx>=0.6.0",
    "tqdm>=4.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "aiofiles>=0.8",
    "beautifulsoup4>=4.9",
    "aiohttp>=3.8",
    "pandas-stubs>=2.3.0.250703",
    "types-pyyaml>=6.0.12.20250516",
    "types-aiofiles>=24.1.0.20250606",
    "types-openpyxl>=3.1.5.20250602",
    "types-tqdm>=4.67.0.20250516",
    "openai-agents>=0.1.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
